samples/_failures_safe/1761095359_eb96e6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cac26614.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_cac26614.c:141:13: error: expected declaration or statement at end of input
  141 |             if (weight < 0) continue;
      |             ^~
./samples/SAFE/__tmp_cac26614.c:141:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cac26614.c:141:13: error: expected declaration or statement at end of input
